# app/schemas/auth_schemas.go
@@ -8,12 +8,21 @@ type ErrorResponse struct {
 	Error string `json:"error"`
 }
 
-type RegisterUserRequest struct {
+type RegisterRequest struct {
 	Email    string `json:"email"    validate:"required,email"`
 	Password string `json:"password" validate:"required,min=8,passwd"`
 }
 
-type RegisterUserResponse struct {
+type RegisterResponse struct {
 	ID    pgtype.UUID `json:"id"`
 	Email string      `json:"email"`
+}
+
+type LoginRequest struct {
+	Email    string `json:"email"    validate:"required,email"`
+	Password string `json:"password" validate:"required,min=8,passwd"`
+}
+
+type LoginResponse struct {
+	Token string `json:"token"`
 }
