# docs/swagger.json
@@ -4,6 +4,41 @@
         "contact": {}
     },
     "paths": {
+        "/login": {
+            "post": {
+                "description": "Login User",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Login User",
+                "responses": {
+                    "200": {
+                        "description": "User logged in",
+                        "schema": {
+                            "$ref": "#/definitions/schemas.LoginResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid request",
+                        "schema": {
+                            "$ref": "#/definitions/schemas.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/schemas.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/register": {
             "post": {
                 "description": "Create New User",
@@ -24,7 +59,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/schemas.RegisterUserRequest"
+                            "$ref": "#/definitions/schemas.RegisterRequest"
                         }
                     }
                 ],
@@ -32,7 +67,7 @@
                     "201": {
                         "description": "New user created",
                         "schema": {
-                            "$ref": "#/definitions/schemas.RegisterUserResponse"
+                            "$ref": "#/definitions/schemas.RegisterResponse"
                         }
                     },
                     "400": {
@@ -60,7 +95,15 @@
                 }
             }
         },
-        "schemas.RegisterUserRequest": {
+        "schemas.LoginResponse": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "schemas.RegisterRequest": {
             "type": "object",
             "required": [
                 "email",
@@ -76,7 +119,7 @@
                 }
             }
         },
-        "schemas.RegisterUserResponse": {
+        "schemas.RegisterResponse": {
             "type": "object",
             "properties": {
                 "email": {
